--- a/index.html
+++ b/index.html
@@ -1,14 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My-Plan</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-</body>
+    <script
+      src="https://kit.fontawesome.com/70a4920640.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="header-banner-container">
+        <div class="header-banner-info">
+          <h1 class="header-info-title">
+            All Thinks Are <br />Possible If You <br />believe
+          </h1>
+          <p class="header-info-text">
+            There are many variations of passages of Lorem Ipsum <br />
+            available, but the majority have suffered alteration in some <br />
+            form, by injected humour, or randomised words
+          </p>
+          <button class="btn">Contact Us</button>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="my-fail-year">
+        <div class="image">
+          <img src="./image/person.png" alt="" />
+        </div>
+        <div class="fail-year-info">
+          <h3 class="fail-year-info-title">
+            My failures of <br />previous year
+          </h3>
+          <p class="fail-year-info-text">
+            Contrary to popular belief, Lorem Ipsum is not <br />
+            simply random text. It has roots in a piece of <br />
+            classical Latin literature from 45 BC, making it over <br />
+            2000 years old. Richard McClintock.
+          </p>
+          <div class="item">
+            <li>
+              <i class="fa-solid fa-check green"></i>Contrary to popular belief,
+              is not simply.
+            </li>
+            <li>
+              <i class="fa-solid fa-check green"></i>Contrary to popular belief.
+            </li>
+            <li>
+              <i class="fa-solid fa-check green"></i>Contrary to popular , is
+              not simply.
+            </li>
+            <li>
+              <i class="fa-solid fa-check green"></i>Contrary to popular belief,
+              is not simply.
+            </li>
+            <li>
+              <i class="fa-solid fa-check green"></i>Contrary to popular simply.
+            </li>
+          </div>
+        </div>
+      </section>
+      <section class="my-plan">
+        <h2>My Plans</h2>
+        <div class="cards-container">
+          <div class="card">
+            <img src="./icons/web.png" alt="" />
+            <h3 class="card-title">Web Development</h3>
+            <p class="card-text">I want to start</p>
+          </div>
+          <div class="card">
+            <img src="./icons/js.png" alt="" />
+            <h3 class="card-title">Javascript</h3>
+            <p class="card-text">I want to learn</p>
+          </div>
+          <div class="card">
+            <img src="./icons/smoke.png" alt="" />
+            <h3 class="card-title">Smoking Habit</h3>
+            <p class="card-text">I want to end</p>
+          </div>
+          <div class="card">
+            <img src="./icons/ecom.png" alt="" />
+            <h3 class="card-title">ectomere</h3>
+            <p class="card-text">I want to develop</p>
+          </div>
+        </div>
+        <div class="call-naw-title">
+          
+            <h2>
+              Always keep a positive <br />
+              mindset
+            </h2>
+            <button class="btn btn-pryme">Call Now</button>
+        </div>
+      </section>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3 class="footer-title" >Future</h3>
+                <p class="footer-text">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+                <a href="#">Email : info@gmail.com</a>
+                <br>
+                <br>
+                <a href="#">Phone : 01500 00 00 00</a>
+                <div class="icons">
+                    <img src="./icons/fb.png" alt="">
+                    <img src="./icons/twitter.png" alt="">
+                    <img src="./icons/youtube.png" alt="">
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3 class="footer-title">Subscribe</h3>
+                <form action="">
+                    <input class="input" type="email" placeholder="Your Email" name="" id="">
+                </form>
+                <input class="btn btn-pryme" type="submit" value="Subscribe">
+            </div>
+        </div>
+    </footer>
+  </body>
 </html>
