--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My-Plan</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/70a4920640.js"
       crossorigin="anonymous"
@@ -64,7 +67,7 @@
         </div>
       </section>
       <section class="my-plan">
-        <h2>My Plans</h2>
+        <h2 class="my-plan-title">My Plans</h2>
         <div class="cards-container">
           <div class="card">
             <img src="./icons/web.png" alt="" />
@@ -107,9 +110,9 @@
                 <br>
                 <a href="#">Phone : 01500 00 00 00</a>
                 <div class="icons">
-                    <img src="./icons/fb.png" alt="">
-                    <img src="./icons/twitter.png" alt="">
-                    <img src="./icons/youtube.png" alt="">
+                    <a href="#"><img src="./icons/fb.png" alt=""></a>
+                    <a href="#"><img src="./icons/twitter.png" alt=""></a>
+                    <a href="#"><img src="./icons/youtube.png" alt=""></a>
                 </div>
             </div>
             <div class="footer-column">
@@ -123,3 +126,4 @@
     </footer>
   </body>
 </html>
+   
